# uk_rail_isochrones

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  out.geojson
src/: adapters.rs  csa.rs  main.rs
src/adapters/: cif.rs  mod.rs
src/cif/: adapter.rs  alf.rs  mca.rs  mod.rs  msn.rs
src/csa/: adapter.rs  csa_state.rs  mod.rs  stop_collection.rs  transport_network.rs
src/csa/adapters/: cif.rs  mod.rs
