[package]
name = "uk_rail_isochrones"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
geo-types = { version = "0.7.17", features = ["serde"] }
geojson = "0.24.2"
itertools = "0.14.0"
kiddo = "5.2.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
