[package]
name = "uk_rail_isochrones"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
geo-types = { version = "0.7.17", features = ["serde"] }
geojson = "0.24.2"
itertools = "0.14.0"
kiddo = { version = "5.2.2", features = ["serde"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zip = "6.0.0"
